<resources>
    <string name="app_name" translatable="false">SeekArt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_logout" translatable="false">Logout</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_email">Please, provide a valid email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_login_password">Invalid password</string>
    <string name="invalid_credentials">Incorrect credentials inserted</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="age">Age</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="no_account">You have\'t an account?</string>
    <string name="completed_routes">Completed routes</string>
    <string name="completed_games">Completed games</string>
    <string name="loading">Loading...</string>
    <string name="load_json">Load your path file</string>
    <string name="rate">Rate</string>
    <string name="rate_shared">Thanks for your feedback!</string>
    <string name="succesful_permission">Permission received, now you can load the file</string>
    <string name="refused_permission">Permission refused, can\'t proceed with file loading.</string>
    <string name="error_loading">Can\'t load the file. Format not valid.</string>
    <string name="share_with">Share with</string>
    <string name="i_visited">I visited</string>
    <string name="review">Review:</string>
    <string name="route_error">Couldn\'t find route file.</string>
    <string name="profile">Profile</string>
    <string name="route">Route</string>
    <string name="quiz" translatable="false">Quiz</string>
    <string name="play">Play</string>
    <string name="points">Points:</string>
    <string name="file_already_loaded">You already loaded this file!</string>
    <string name="fill_fields">Fill all the fields before submitting.</string>
    <string name="generic_login_error">Unknown execution error</string>
    <string name="Database_connection_error">Impossible to estabilish connection to the database, retry later</string>
    <string name="scan_qr">Scan QR</string>
    <string name="action_search">Search</string>
    <string name="completed_route">You completed the route!</string>
    <string name="No_search_results">No Results</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="email_alreadyused">Failed to register user, Email already in use.</string>
    <string name="successfull_register">User has been registered successfully.</string>
    <string name="failed_register">Failed to register user.</string>
    <string name="question_rating">How much did you like this route?</string>
    <string name="results">Results</string>
    <string name="or">or</string>
    <string name="guest_login">Login as a Guest</string>
    <string name="not_connected">Not connected</string>
    <string name="not_logged">You are currently not logged.</string>
    <string name="answer">Correct %d Wrong %d</string>
    <string name="activate_bluetooth">You need to activate bluetooth to use this feature</string>
    <string name="bluetooth_success">Now you can use this bluetooth feature</string>
    <string name="device_found">Device found</string>
    <string name="not_found">You need to pair your phone with the correct device.</string>
    <string name="connect">Connect</string>
    <string name="game_istruction">Instructions: pair with a device called a \"game\" to use this feature</string>
    <string name="scan_bluetooth">Interactions BT</string>
</resources>