<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"

            android:title="@string/profile" />

        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_round_qr_code_24"

            android:title="@string/scan_qr" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"

            android:title="@string/menu_logout" />

</menu>