<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="logo"
                app:srcCompat="@drawable/colosseum_1" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/edittext"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:minHeight="50dp"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/edittext"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="50dp"
                android:padding="10dp"
                android:selectAllOnFocus="true"
                android:textColorHint="#757575"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:enabled="true"
                android:text="@string/action_sign_in"
                android:textSize="16sp"
                app:backgroundTint="@color/brown_200"
                app:cornerRadius="10dp"
                app:rippleColor="@color/brown_700" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/no_account"

                    />

                <TextView
                    android:id="@+id/action_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:text="@string/action_register"
                    android:textColor="@color/purple_700" />

            </LinearLayout>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/or" />
            <TextView
                android:id="@+id/guest_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/purple_700"
                android:clickable="true"
                android:text="@string/guest_login" />
        </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>